# stocks-evidence

./: .gitignore  README.md  bun.lockb  evidence.plugins.yaml  package.json  pyproject.toml
.evidence/customization/: .profile.json
pages/: index.md
sources/stocks/: connection.yaml  correlations.sql  eod.sql  orders.sql  pct_change.sql  stocks.sql
tmp/: scratch.ipynb
